BashController second mode in progress